test/src/e2e_vm_tests/test_programs/should_fail/unrecognized_opcode/src/main.sw
script;

fn main() {
    let _x = asm (r1, r2: 0, r3: 0) {
        modd r1 r2 r3;
        r1: u64
    };
}
